# D4RL_to_LeRobot

./: .gitignore  README.md  pyproject.toml
src/: d4rl_to_lerobot.py  d4rl_to_lerobot_legacy.py  vd4rl_to_lerobot.py
