[project]
name = "d4rl-to-lerobot"
version = "0.1.0"
description = "Convert D4RL dataset to LeRobot dataset format."
authors = [{name = "Khalil Meftah", email = "kmeftah.khalil@gmail.com"}]

readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "minari",
    "dm_control==1.0.27",
    "lerobot @ git+https://github.com/huggingface/lerobot.git",
    "dmcgym @ git+https://github.com/s1lent4gnt/dmcgym.git",
    "d4rl @ git+https://github.com/s1lent4gnt/D4RL.git",
    "cython==0.29.36",
]

[project.urls]
Repository = "https://github.com/s1lent4gnt/D4RL_to_LeRobot"

[dependency-groups]
dev = [
    "ruff>=0.9.2",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79